--- a/css/styles.css
+++ b/css/styles.css
@@ -379,6 +379,29 @@ ul {
 
 /* Portfolio.html */
 
+.main-jobs {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.main-jobs-item {
+  width: 370px;
+  margin-right: 30px;
+  margin-bottom: 30px;
+}
+
+.main-jobs-item:nth-child(3n) {
+  margin-right: 0px;
+}
+
+.main-jobs-item:nth-last-child(-n + 3) {
+  margin-bottom: 0px;
+}
+
+.main-jobs-item-link {
+  display: block;
+  margin-bottom: 20px;
+}
 .main-btn {
   font-weight: 500;
   font-size: 16px;
@@ -386,6 +409,15 @@ ul {
   text-align: center;
   background-color: var(--backgraoud-color-secondary);
   color: var(--titel-light-color);
+  margin-right: 8px;
+  justify-content: center;
+  align-items: center;
+  background: #f5f4fa;
+  border-radius: 4px;
+  /* padding-top: 6px; */
+  /* padding-right: 22px;
+  padding-bottom: 6px;
+  padding-left: 6px; */
 }
 
 .main-btn:hover,
@@ -395,11 +427,13 @@ ul {
 }
 
 .jobs-titel {
+  display: block;
   font-weight: 700;
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
   color: var(--titel-light-color);
+  margin-bottom: 4px;
 }
 
 .jobs-titel-item {
@@ -407,10 +441,16 @@ ul {
   font-size: 16px;
   line-height: 1.87;
   color: var(--titel-dark-color);
+  margin-bottom: 20px;
 }
 .jobs-titel-text {
   font-weight: normal;
   font-size: 18px;
   line-height: 1.56;
   color: var(--backgraoud-color);
+}
+.main-item {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 50px;
 }
